style: align REST helpers with OFBiz collection utilities